--- a/pepeizqs deals web/Pages/Account/ForgotPassword.cshtml
+++ b/pepeizqs deals web/Pages/Account/ForgotPassword.cshtml
@@ -8,7 +8,7 @@
 @inject SignInManager<Usuario> SignInManager
 
 @{
-    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "String1", "AccountForgotPassword");
+    ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "String1", "ForgotPassword");
     Layout = "/Pages/Shared/_Layout.cshtml";
 
     bool usuarioLogeado = SignInManager.IsSignedIn(User);
