--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -26,6 +26,15 @@
 	}
 </style>
 
+@if (usuario != null && deseadosGestor.Count == 0)
+{
+	<div style="max-width: 800px; margin: auto;">
+		<div style="background-color: var(--fondoOscuro); border: 1px solid var(--fondoBotonPequeño); padding: 40px;">
+			@Herramientas.Idiomas.CogerCadena(idioma, "String21", "Wishlist")
+		</div>
+	</div>
+}
+
 @if (usuario != null && deseadosGestor.Count > 0)
 {
 	<div style="max-width: 1000px; margin: auto;">
