--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -85,13 +85,7 @@
                     usuarioLogeado = usuarioLogeado,
                     adminLogeado = adminLogeado, 
                     usuarioAvatar = usuario?.Avatar,
-                    usuarioEmail = usuario?.Email,
-                    discord = discord, 
-                    telegram = telegram, 
-                    reddit = reddit, 
-                    twitter = twitter, 
-                    steam = steam, 
-                    rss = rss 
+                    usuarioEmail = usuario?.Email
                 }))
             </div>
         </nav>
