--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticia.razor
@@ -53,7 +53,7 @@
 	[Parameter]
 	public int noticiaId { get; set; }
 
-	public Noticias.Noticia noticia = new Noticias.Noticia();
+	public global::Noticias.Noticia noticia = new global::Noticias.Noticia();
 
 	protected override async Task OnInitializedAsync()
 	{
