--- a/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Portada.razor
@@ -349,112 +349,127 @@
 	</div>
 }
 
-@if (noticiasMostrar.Count > 0)
-{
-	<div style="display: flex; overflow: auto; padding-bottom: 20px; gap: 30px; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
-		@foreach (var noticia in noticiasMostrar)
-		{
-			string marginExtra = string.Empty;
-
-			if (noticiasMostrar.Count == 1 || noticiasMostrar.Count == 2)
+<div style="background-color: var(--fondoOscuro); padding: 30px; margin-bottom: 60px;">
+	@if (noticiasMostrar.Count > 0)
+	{
+		<div style="display: flex; overflow: auto; padding-bottom: 20px; gap: 30px; scrollbar-color: var(--fondoCodigo) var(--fondoOscuro);">
+			@foreach (var noticia in noticiasMostrar)
 			{
-				marginExtra = "margin-left: auto; margin-right: auto;";
-			}
+				string marginExtra = string.Empty;
 
-			<div class="tooltip-juego noticia-ancho" style="float: left; flex: 0 0 auto; @marginExtra" onmousemove="hoverTooltip(event, 'tooltip-@noticia.Id.ToString()')">
-				<div id="tooltip-@noticia.Id.ToString()" class="tooltip-relleno" style="padding: 15px; max-width: 400px;">
-					@Herramientas.Idiomas.MirarTexto(idioma, @noticia.TituloEn, @noticia.TituloEs)
-				</div>
+				if (noticiasMostrar.Count == 1 || noticiasMostrar.Count == 2)
+				{
+					marginExtra = "margin-left: auto; margin-right: auto;";
+				}
 
-				<div @onclick="(e => GestionarNoticia(e, noticia.Enlace, noticia.Id, noticia.Tipo))" style="height: 100%; cursor: pointer;">
-					<div class="noticia-expandir" style="display: flex; flex-direction: column; color: var(--colorTexto); font-size: 14px; height: 100%; margin: 0 auto;">
-						<div style="display: flex; align-items: center;">
-							<div style="background-color: var(--fondoBotonPequeño); padding: 8px 12px; margin-left: auto;">
-								@if (noticia.Tipo == NoticiaTipo.Bundles)
-								{
-									@Herramientas.Idiomas.CogerCadena(idioma, "News1", "Index")
-								}
-								else if (noticia.Tipo == NoticiaTipo.Gratis)
-								{
-									@Herramientas.Idiomas.CogerCadena(idioma, "News2", "Index")
-								}
-								else if (noticia.Tipo == NoticiaTipo.Suscripciones)
-								{
-									@Herramientas.Idiomas.CogerCadena(idioma, "News3", "Index")
-								}
-								else
-								{
-									@noticia.Tipo
-								}
+				<div class="tooltip-juego noticia-ancho" style="float: left; flex: 0 0 auto; @marginExtra" onmousemove="hoverTooltip(event, 'tooltip-@noticia.Id.ToString()')">
+					<div id="tooltip-@noticia.Id.ToString()" class="tooltip-relleno" style="padding: 15px; max-width: 400px;">
+						@Herramientas.Idiomas.MirarTexto(idioma, @noticia.TituloEn, @noticia.TituloEs)
+					</div>
+
+					<div @onclick="(e => GestionarNoticia(e, noticia.Enlace, noticia.Id, noticia.Tipo))" style="height: 100%; cursor: pointer;">
+						<div class="noticia-expandir" style="display: flex; flex-direction: column; color: var(--colorTexto); font-size: 14px; height: 100%; margin: 0 auto;">
+							<div style="display: flex; align-items: center;">
+								<div style="background-color: var(--fondoBotonPequeño); padding: 8px 12px; margin-left: auto;">
+									@if (noticia.Tipo == NoticiaTipo.Bundles)
+									{
+										@Herramientas.Idiomas.CogerCadena(idioma, "News1", "Index")
+									}
+									else if (noticia.Tipo == NoticiaTipo.Gratis)
+									{
+										@Herramientas.Idiomas.CogerCadena(idioma, "News2", "Index")
+									}
+									else if (noticia.Tipo == NoticiaTipo.Suscripciones)
+									{
+										@Herramientas.Idiomas.CogerCadena(idioma, "News3", "Index")
+									}
+									else
+									{
+										@noticia.Tipo
+									}
+								</div>
 							</div>
-						</div>
 
-						<div style="background-color: var(--fondoBotonPequeño); padding: 1px; flex: 1;">
-							<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
-						</div>
+							<div style="background-color: var(--fondoBotonPequeño); padding: 1px; flex: 1;">
+								<img src="@noticia.Imagen" style="width: 100%; height: 100%; object-fit: contain;" alt="@noticia.TituloEn" />
+							</div>
 
-						<div style="background-color: var(--fondoBotonPequeño); padding: 10px 12px; display: flex; align-items: center;">
-							@{
-								string icono = string.Empty;
+							<div style="background-color: var(--fondoBotonPequeño); padding: 10px 12px; display: flex; align-items: center;">
+								@{
+									string icono = string.Empty;
 
-								if (noticia.Tipo == NoticiaTipo.Bundles)
-								{
-									icono = Bundles2.BundlesCargar.DevolverBundle(noticia.BundleTipo).ImagenIcono;
+									if (noticia.Tipo == NoticiaTipo.Bundles)
+									{
+										icono = Bundles2.BundlesCargar.DevolverBundle(noticia.BundleTipo).ImagenIcono;
+									}
+									else if (noticia.Tipo == NoticiaTipo.Gratis)
+									{
+										icono = Gratis2.GratisCargar.DevolverGratis(noticia.GratisTipo).ImagenIcono;
+									}
+									else if (noticia.Tipo == NoticiaTipo.Suscripciones)
+									{
+										icono = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(noticia.SuscripcionTipo).ImagenIcono;
+									}
+
+									if (string.IsNullOrEmpty(icono) == false)
+									{
+										<div>
+											<img src="@icono" style="width: 18px; height: 18px; margin-right: 20px;" alt="Store" />
+										</div>
+									}
 								}
-								else if (noticia.Tipo == NoticiaTipo.Gratis)
-								{
-									icono = Gratis2.GratisCargar.DevolverGratis(noticia.GratisTipo).ImagenIcono;
-								}
-								else if (noticia.Tipo == NoticiaTipo.Suscripciones)
-								{
-									icono = Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(noticia.SuscripcionTipo).ImagenIcono;
-								}
 
-								if (string.IsNullOrEmpty(icono) == false)
-								{
-									<div>
-										<img src="@icono" style="width: 18px; height: 18px; margin-right: 20px;" alt="Store" />
-									</div>
-								}
-							}
-
-							<div style="margin-left: auto;">
-								@Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)
+								<div style="margin-left: auto;">
+									@Herramientas.Calculadora.DiferenciaTiempo(noticia.FechaEmpieza, idioma)
+								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+			}
+		</div>
+
+		<div style="display: flex; align-items: center; justify-content: center; margin: 20px auto 0px auto; gap: 60px;">
+			<a class="boton-pequeño" style="padding: 15px 20px; font-size: 17px; text-align: center; min-width: 300px; width: auto;" href="/last-news">
+				@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsMore", "Index")
+			</a>
+
+			<div>
+				<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
+
+				<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a></div>
+				</div>
 			</div>
-		}
-	</div>
+		</div>
+	}
+	else
+	{
+		<div style="display: flex; align-items: center; justify-content: center; margin: 20px auto 0px auto; gap: 60px;">
+			<a class="boton-pequeño" style="max-width: 700px; padding: 15px 20px; font-size: 17px; text-align: center;" href="/last-news">
+				@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsNo", "Index")
+			</a>
 
-	<div style="display: flex; align-items: center; justify-content: center; margin: 20px auto 50px auto; gap: 60px;">
-		<a class="boton-pequeño" style="padding: 15px 20px; font-size: 17px; text-align: center; min-width: 300px; width: auto;" href="/last-news">
-			@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsMore", "Index")
-		</a>
+			<div>
+				<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
 
-		<div>
-			<label>@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsSocial", "Index")</label>
-
-			<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
-				<div style="margin-left: 6px; margin-right: 6px;"><a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a></div>
+				<div style="display: flex; align-items: center; justify-content: center; font-size: 22px; text-align: center; color: var(--colorEnlace); margin-top: 10px;">
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@discord" target="_blank"><i class="fa-brands fa-discord"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@telegram" target="_blank"><i class="fa-brands fa-telegram"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@reddit" target="_blank"><i class="fa-brands fa-reddit"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@twitter" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@steam" target="_blank"><i class="fa-brands fa-steam"></i></a></div>
+					<div style="margin-left: 6px; margin-right: 6px;"><a href="@rss" target="_blank"><i class="fa-solid fa-rss"></i></a></div>
+				</div>
 			</div>
-		</div>		
-	</div>
-}
-else
-{
-	<div style="margin-bottom: 60px; margin-left: auto; margin-right: auto; width: 700px;">
-		<a class="boton-pequeño" style="width: 100%; padding: 15px 20px; font-size: 17px; text-align: center;" href="/last-news">
-			@Herramientas.Idiomas.CogerCadena(idioma, "LastNewsNo", "Index")
-		</a>
-	</div>
-}
+		</div>
+	}
+</div>
 
 <style>
 	.noticia-panel {
