--- a/pepeizqs deals web/Pages/account.cshtml
+++ b/pepeizqs deals web/Pages/account.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/account/{seccion:int?}/"
 
 @using Microsoft.AspNetCore.Identity
 @using pepeizqs_deals_web.Areas.Identity.Data
@@ -18,6 +18,7 @@
 {
     @(await Html.RenderComponentAsync<Componentes.Cuenta.Cuenta>(RenderMode.ServerPrerendered, new
     {
-        idioma = Model.idioma
+        idioma = Model.idioma,
+        seccion = Model.seccion
     }))
 }
